# skills-hub

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  package.json
.github/: TEMPLATE_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: skill_submission.md
.github/agents/: agentic-workflows.agent.md
.github/skills/copilot-orchestrator/: SKILL.md
.github/skills/copilot-orchestrator/references/: CAPABILITY_REGISTRY.md  CONTEXT_PROTOCOL.md  TOOL_PATTERNS.md
.github/skills/copilot-orchestrator/scripts/: README.md  models.py  orchestrator.py  pyproject.toml  tool_factory.py
.github/skills/copilot-orchestrator/templates/: shell-executor-example.md
.github/workflows/: agentics-maintenance.yml  deploy.yml  docs-sync.lock.yml  docs-sync.md  enrich-skills.yml  sync-skills.yml  validate-skill.yml
archive/scripts/: context_manager.py
archive/templates/: ephemeral_skill.md
scripts/: README.md  __init__.py  aggregate-skills.js  enrich-skills.js  scan-skills.js
site/: astro.config.mjs  package-lock.json
site/src/components/: CategoryCard.astro  SearchBar.astro  SkillCard.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/pages/categories/: [id].astro  index.astro
site/src/pages/skills/: [id].astro  index.astro
site/src/styles/: global.css
skills/: registry.json  security-rules.yml
