[project]
name = "copilot-orchestrator"
version = "1.0.0"
description = "Universal meta-skill orchestrating GitHub Copilot SDK for any development task"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "skillpilot", email = "skillpilot@example.com" }
]
keywords = [
    "copilot",
    "github",
    "sdk",
    "agent",
    "skills",
    "orchestration",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # GitHub Copilot SDK - Core dependency for SDK integration
    "github-copilot-sdk>=0.1.0",
    
    # Pydantic v2 - Type-safe data validation and serialization
    "pydantic>=2.5.0",
    
    # Structured logging - Better debugging and observability
    "structlog>=24.1.0",
    
    # Async HTTP client - For MCP server connections
    "httpx>=0.27.0",
    
    # Rich terminal output - Better UX for streaming responses
    "rich>=13.7.0",
    
    # Token counting - Accurate budget management
    "tiktoken>=0.6.0",
    
    # YAML parsing - For skill configuration
    "pyyaml>=6.0.1",
    
    # UUID generation - For task tracking
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
orchestrate = "orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv-specific configuration for fast dependency resolution
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
